relm-derive/tests/ui/empty_view_macro.stderr
error: unexpected end of input, expected one of: string literal, identifier, `#`
  --> $DIR/empty_view_macro.rs:12:11
   |
12 |     view! {}
   |           ^^
